--- a/02/Assignment02/storybook.html
+++ b/02/Assignment02/storybook.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Storybook for the Web Engineering Module</title>
     <style>
-        * {background-color: floralwhite}
+        * {background-color: aliceblue}
     </style>
     <link rel="stylesheet" type="text/css" href="animate.css">
     <link rel="stylesheet" type="text/css" href="style.css">
